--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@vercel/analytics": "^1.3.1",
+    "aos": "^2.3.4",
     "clsx": "^2.1.1",
     "framer-motion": "^11.3.18",
     "hamburger-react": "^2.5.1",
@@ -20,6 +21,7 @@
     "tailwind-merge": "^2.4.0"
   },
   "devDependencies": {
+    "@types/aos": "^3.0.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
